# MicroPython_MOTOR

./: .pylintrc  README.rst  examples.json  package.json  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: motor_simpletest.py  servo_simpletest.py  stepper_simpletest.py
micropython_motor/: __init__.py  motor.py  servo.py  stepper.py
